# Ore-v1

./: Cargo.toml
ore-cli-consumer/: .env  .gitignore  Cargo.toml  Readme.md
ore-cli-consumer/src/: main.rs
ore-cli-producter/: .env  Cargo.toml  Readme.md
ore-cli-producter/src/: cu_limits.rs  main.rs  mine.rs  register.rs  send_and_confirm.rs  utils.rs
