[package]
name = "ore-cli-consumer"
edition = "2021"


[features]
default = []
admin = []

[dependencies]
log = "0.4"
solana-sdk = "^1.16"
tokio = { version = "1.35.1", features = ["full"] }
rayon = "1.10.0"
lapin = "1.8"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
colored = "2.0.0"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
anyhow = "1.0.70"
