[package]
name = "ore-cli-producter"
edition = "2021"


[features]
default = []
admin = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
cached = "0.46.1"
chrono = "0.4.34"
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.30"
log = "0.4"
ore = { version = "1.2.1", package = "ore-program" }
rand = "0.8.4"
solana-cli-config = "1.18.5"
solana-client = "^1.16"
solana-program = "^1.16"
solana-sdk = "^1.16"
solana-transaction-status = "^1.16"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [
    "no-entrypoint",
] }
tokio = { version = "1", features = ["full"] }
lapin = { version = "1.8" }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
colored = "2.0.0"
fern = { version = "0.6.2", features = ["colored"] }
anyhow = "1.0.70"
